syntax = "proto3";
option cc_enable_arenas = true;

package NFq.NConfig;
option java_package = "ru.yandex.kikimr.proto";

import "yql/essentials/providers/common/proto/gateways_config.proto";

////////////////////////////////////////////////////////////

message TGatewaysConfig {
    bool Enabled = 1;
    NYql.TDqGatewayConfig Dq = 2;
    NYql.TPqGatewayConfig Pq = 3;
    NYql.TYdbGatewayConfig Ydb = 4;
    NYql.TS3GatewayConfig S3 = 5;
    NYql.TSolomonGatewayConfig Solomon = 6;
    NYql.THttpGatewayConfig HttpGateway = 7;
    NYql.TGenericConnectorConfig Connector = 8 [deprecated=true];
    NYql.TYqlCoreConfig YqlCore = 9;
    NYql.TGenericGatewayConfig Generic = 10;
}
